KGeoBag: add triangle merging tool
This can be used to merge a triangle mesh (from STL/PLY file) into a
mesh containing rectangles/quadrilaterals. The result is stored as PLY
file and can be used with KGeoBag/KEMField/Kassiopeia.

--- a/KGeoBag/Source/Application/CMakeLists.txt
+++ b/KGeoBag/Source/Application/CMakeLists.txt
@@ -8,6 +8,7 @@ if (KGeoBag_ENABLE_APP)
         MetricsExtensionTester
         EulerAngles
         GeometryDump
+        MergeTriangles
     )
 
     # libraries
