KGeoBag: improve merge tool, add OpenMP
* Can now use OpenMP to parallelize merge, set `OMP_NUM_THREADS` to set
number of threads.
* Check distance between triangles for HUGE speedup
* More debugging/testing options

--- a/KGeoBag/Source/Application/CMakeLists.txt
+++ b/KGeoBag/Source/Application/CMakeLists.txt
@@ -1,6 +1,8 @@
 option (KGeoBag_ENABLE_APP "Build KGeoBag applications" ON)
 if (KGeoBag_ENABLE_APP)
 
+    find_package(OpenMP)  # optional
+
     # names
     set( APPLICATION_NAMES
         KGeoBag
@@ -52,6 +54,10 @@ if (KGeoBag_ENABLE_APP)
     # install
     foreach( NAME ${APPLICATION_NAMES} )
         target_link_libraries( ${NAME} ${APPLICATION_LIBRARIES} )
+        if(OpenMP_FOUND)
+            target_compile_definitions(${NAME} PRIVATE USE_OPENMP)
+            target_link_libraries(${NAME} OpenMP::OpenMP_CXX)
+        endif(OpenMP_FOUND)
         kasper_install_executables( ${NAME} )
     endforeach()
 
